# workstation-setup

./: .gitignore  CLAUDE.md  README-LAYER2-DATA-PROCESSING.md  README-LAYER3-WAREHOUSES.md  README.md
data-platform-framework/: .pre-commit-config.yaml  .pre-push-config.yaml  Makefile  README.md  __init__.py  pyproject.toml
data-platform-framework/base/: __init__.py
data-platform-framework/base/loaders/: __init__.py  data_factory.py
data-platform-framework/base/models/: __init__.py  table_mixins.py  temporal_patterns.py
data-platform-framework/base/triggers/: __init__.py  trigger_builder.py
data-platform-framework/config/: __init__.py  targets.py
data-platform-framework/engines/: __init__.py  mysql_engine.py  postgres_engine.py  sqlite_engine.py
data-platform-framework/scripts/: __init__.py  deploy_datakit.py
data-platform-framework/tests/: __init__.py  run_tests.py
data-platform-framework/tests/unit/: __init__.py  test_framework_structure.py  test_imports_structure.py  test_table_mixins.py  test_trigger_builder.py
data-platform-framework/utils/: __init__.py  deployment.py
docs/: QUICK_START.md  README.md  api-reference.md  architecture-overview.md  authentication-kerberos.md  bronze-silver-gold.md  container-orchestration.md  creating-datakits.md  dag-patterns.md  dbt-development.md  deployment-cicd.md  developer-workflows.md  monitoring-observability.md  multi-tenant-setup.md  performance-scaling.md  testing-strategies.md  troubleshooting.md
docs/datakits/: architecture.md
docs/datakits/sources/: postgresql.md
docs/dbt/models/: silver-layer.md
docs/journey/: 01_local.md  02_shared_dev.md  03_int_qa.md  04_prod.md  README.md
docs/philosophy/: 01_principles.md  02_choices.md  03_options.md  04_future.md  README.md
examples/all-in-one/: Dockerfile  README.md  airflow_settings.yaml  docker-compose.override.yml  requirements.txt
examples/all-in-one-example/: Dockerfile  README.md
examples/all-in-one-example/.astro/: config.yaml
examples/all-in-one-example/include/: .env.example
examples/all-in-one/dags/: pagila_pipeline.py
layer2-datakits/bronze-pagila/: Dockerfile  README.md  pyproject.toml
layer2-datakits/bronze-pagila/datakit_bronze/: cli.py  ingest.py
layer2-datakits/dbt-runner/: Dockerfile  README.md
layer2-datakits/postgres-runner/: Dockerfile  README.md  pyproject.toml
layer2-datakits/postgres-runner/datakit_postgres/: bronze.py  cli.py
layer2-datakits/postgres-runner/examples/: op_runner.py
layer2-datakits/spark-runner/: Dockerfile  README.md  pyproject.toml
layer2-datakits/spark-runner/datakit_spark/: cli.py  job.py
layer2-datakits/sqlserver-runner/: Dockerfile  README.md  pyproject.toml
layer2-datakits/sqlserver-runner/datakit_sqlserver/: bronze.py  cli.py  models.py
layer2-dbt-projects/gold-dimensions/: dbt_project.yml
layer2-dbt-projects/gold-dimensions/models/dimensions/: dim_date.sql  dim_film.sql  dim_staff.sql  dim_store.sql  schema.yml  sources.yml
layer2-dbt-projects/gold-dimensions/profiles-example/: profiles.yml
layer2-dbt-projects/gold-facts/: dbt_project.yml  packages.yml
layer2-dbt-projects/gold-facts/models/facts/: fact_rental.sql  schema.yml  sources.yml
layer2-dbt-projects/gold-facts/profiles-example/: profiles.yml
layer2-dbt-projects/silver-core/: dbt_project.yml
layer2-dbt-projects/silver-core/models/silver/: schema.yml  sl_address.sql  sl_customer.sql  sl_film.sql  sl_inventory.sql  sl_language.sql  sl_rental_enriched.sql  sl_staff.sql  sl_store.sql  sources.yml
layer2-dbt-projects/silver-core/profiles-example/: profiles.yml
layer3-warehouses/: Dockerfile  README.md  docker-compose.override.yml  requirements.txt
layer3-warehouses/configs/warehouses/: acme.yaml  globex.yaml
layer3-warehouses/dags/: pagila_pipeline.py  warehouse_factory.py
layer3-warehouses/include/: .env.example
layer3-warehouses/scripts/: deploy-databases.sh  run-integration-tests.sh  setup-layer3.sh  teardown-layer3.sh
scripts/: build-layer2-components.sh  deploy-layer2-runtime.sh  teardown-layer2.sh  test-layer2-components.sh
