[project]
name = "datakit-bronze-pagila"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["typer>=0.12,<0.13","pandas>=2,<3","sqlalchemy>=2.0,<2.1","psycopg[binary]==3.2.10"]
[project.scripts]
datakit-bronze = "datakit_bronze.cli:app"
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
