[project]
name = "datakit-postgres"
version = "0.1.0"
description = "Postgres datakit (bronze ingestion)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<0.13",
  "sqlmodel==0.0.24",
  "sqlalchemy>=2.0,<2.1",
  "psycopg[binary]==3.2.10",
  "pandas>=2,<3"
]
[project.scripts]
datakit-pg = "datakit_postgres.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
