[project]
name = "datakit-sqlserver"
version = "0.1.0"
description = "SQL Server datakit (bronze ingestion)"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<0.13",
  "sqlmodel==0.0.24",
  "sqlalchemy>=2.0,<2.1",
  "pyodbc>=5,<6",
  "pandas>=2,<3"
]
[project.scripts]
datakit-sqlsrv = "datakit_sqlserver.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
